<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <Preference
        android:key="@string/pref_key_add_pin"
        android:title="@string/pref_title_add_pin"
        android:enabled="true"/>
    <Preference
        android:key="@string/pref_key_change_pin"
        android:title="@string/pref_title_change_pin"
        android:enabled="true"/>
    <Preference
        android:key="@string/pref_key_delete_pin"
        android:title="@string/pref_title_delete_pin"
        android:enabled="true"/>


    <!-- This preference simply launches an intent when selected. Use this UI sparingly, per
         design guidelines. -->

</PreferenceScreen>
